ping-pong/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-rollout
  namespace: exercises
spec:
  replicas: 1
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: { duration: 2m }
        - analysis:
            templates:
              - templateName: pingpong-cpu-check
        - setWeight: 100
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: k13lucien/ping-pong
          ports:
            - containerPort: 8081
